<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">F1 Sound</string>
    <string name="title">F1 Sound</string>
    <string name="start">DÉMARRER</string>
    <string name="stop">ARRÊTER</string>
    <string name="rpm_label">%1$d tr/min</string>
    <string name="gforce_label">%1$.2f G</string>
    <string name="speed_label">%1$s km/h</string>
    <string name="speed_unknown">--</string>
    <string name="braking">FREINAGE</string>
    <string name="volume_label">Volume</string>
    <string name="gps_switch">Utiliser le GPS (régime qui suit la vitesse)</string>
    <string name="status_idle">Fixe le téléphone sur son support, en portrait, puis appuie sur DÉMARRER.</string>
    <string name="status_loading">Chargement des sons…</string>
    <string name="status_listening">Moteur en marche. Accélère !</string>
    <string name="status_orientation">Position du téléphone non reconnue : fixe-le en portrait sur un support, écran vers toi.</string>
    <string name="gps_off">La localisation du téléphone est désactivée : active-la dans les réglages.</string>
    <string name="sensor_unavailable">Ce téléphone n\'a pas d\'accéléromètre.</string>
    <string name="permission_rationale">Localisation refusée : le son fonctionne quand même, sans la vitesse.</string>
</resources>
